fix: remove dimensions from datatip-element, nowrap whitespace

--- a/styles/atom-ide-datatips.less
+++ b/styles/atom-ide-datatips.less
@@ -9,12 +9,9 @@
   font-size: 1rem; // some themes set font sizes on the root node
   margin-top: -2px; // Compensate for shadow
   position: relative;
-  white-space: normal;
+  white-space: nowrap;
   pointer-events: all; // hyperlinks will work
   // user-select: text;   // allow selecting text // TODO does not work
-  max-height: 480px;
-  max-width: 64em;
-  display: block;
 
   p {
     margin-left: 8px;
